# Pds_Cplusplus

Laboratorio1-2020/: CMakeLists.txt  DurationLogger.cpp  DurationLogger.h  Message.cpp  Message.h  MessageStore.cpp  MessageStore.h  Utils.cpp  Utils.h  main.cpp
Laboratorio1-2020/esercitazione1/: CMakeLists.txt  DurationLogger.h  Message.cpp  Message.h  MessageStore.cpp  MessageStore.h  main.cpp
Laboratorio2-2020/: Base.cpp  Base.h  Base2.cpp  Base2.h  CMakeLists.txt  D.h  Directory.cpp  Directory.h  Directory2.cpp  Directory2.h  File.cpp  File.h  File2.cpp  File2.h  main.cpp
Laboratorio3-2020/: CMakeLists.txt  Coordinator.cpp  Coordinator.h  DriverInputT.cpp  DriverInputT.h  MapperInputT.cpp  MapperInputT.h  ReducerInputT.cpp  ReducerInputT.h  ResultT.cpp  ResultT.h  Serializer.cpp  Serializer.h  es3_fork.cpp  es3_map_reduce.cpp  main.cpp
Laboratorio4-2020/: Data.cpp  Data.h  Jobs.cpp  Jobs.h  a.txt  c.txt
Laboratorio5-2020/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  Socket.cpp  Socket.h  main.cpp
